<resources>
    <string name="app_name">SocialNet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>

    <string name="action_register">Sign up</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_news_feed">NewsFeed</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="or_text">or</string>
    <string name="error_login_failed">Email or Password is incorect</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_email">E-mail</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_sendButton">Send</string>
    <string name="user_chat">Chat</string>
    <string name="profile_addFriendButtton">Add friend</string>
    <string name="profile_isFriend">Friends</string>
</resources>
